log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: log-output
  template:
    metadata:
      labels:
        apps: log-output
    spec:
      containers:
        - name: log-output
          image: lucasnicolas/log-output
