log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  type: ClusterIP
  selector:
    apps: log-output
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9999
